--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ h2 {
 }
 
 h3 {
-  /* font-weight: normal !important; */
-  font-family: Cochin, Georgia, serif;
+  font-weight: 700 !important;
+  font-family:  "Ubuntu", "Roboto", serif;
 }
 
 @media screen and (max-width: 1000px) {
